# serializer version: 1
# name: test_update_entities[firmware_update_available][update.mikrotik_routerboard_firmware_update-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'update',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'update.mikrotik_routerboard_firmware_update',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'RouterBOARD Firmware Update',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'RouterBOARD Firmware Update',
    'platform': 'mikrotik',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <UpdateEntityFeature: 1>,
    'translation_key': 'routerboard_update',
    'unique_id': 'ABC123_routerboard-update',
    'unit_of_measurement': None,
  })
# ---
# name: test_update_entities[firmware_update_available][update.mikrotik_routerboard_firmware_update-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <UpdateEntityStateAttribute.AUTO_UPDATE: 'auto_update'>: False,
      <UpdateEntityStateAttribute.DISPLAY_PRECISION: 'display_precision'>: 0,
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/brands/integration/mikrotik/icon.png',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mikrotik RouterBOARD Firmware Update',
      <UpdateEntityStateAttribute.IN_PROGRESS: 'in_progress'>: False,
      <UpdateEntityStateAttribute.INSTALLED_VERSION: 'installed_version'>: '7.18.2',
      <UpdateEntityStateAttribute.LATEST_VERSION: 'latest_version'>: '7.19.1',
      <UpdateEntityStateAttribute.RELEASE_SUMMARY: 'release_summary'>: None,
      <UpdateEntityStateAttribute.RELEASE_URL: 'release_url'>: None,
      <UpdateEntityStateAttribute.SKIPPED_VERSION: 'skipped_version'>: None,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <UpdateEntityFeature: 1>,
      <UpdateEntityStateAttribute.TITLE: 'title'>: None,
      <UpdateEntityStateAttribute.UPDATE_PERCENTAGE: 'update_percentage'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'update.mikrotik_routerboard_firmware_update',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_update_entities[firmware_update_available][update.mikrotik_routeros_firmware_update-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'update',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'update.mikrotik_routeros_firmware_update',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'RouterOS Firmware Update',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'RouterOS Firmware Update',
    'platform': 'mikrotik',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <UpdateEntityFeature: 9>,
    'translation_key': 'firmware_update',
    'unique_id': 'ABC123_fw-update',
    'unit_of_measurement': None,
  })
# ---
# name: test_update_entities[firmware_update_available][update.mikrotik_routeros_firmware_update-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <UpdateEntityStateAttribute.AUTO_UPDATE: 'auto_update'>: False,
      <UpdateEntityStateAttribute.DISPLAY_PRECISION: 'display_precision'>: 0,
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/brands/integration/mikrotik/icon.png',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mikrotik RouterOS Firmware Update',
      <UpdateEntityStateAttribute.IN_PROGRESS: 'in_progress'>: False,
      <UpdateEntityStateAttribute.INSTALLED_VERSION: 'installed_version'>: '7.18.2',
      <UpdateEntityStateAttribute.LATEST_VERSION: 'latest_version'>: '7.19.1',
      <UpdateEntityStateAttribute.RELEASE_SUMMARY: 'release_summary'>: None,
      <UpdateEntityStateAttribute.RELEASE_URL: 'release_url'>: 'https://cdn.mikrotik.com/routeros/7.19.1/CHANGELOG',
      <UpdateEntityStateAttribute.SKIPPED_VERSION: 'skipped_version'>: None,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <UpdateEntityFeature: 9>,
      <UpdateEntityStateAttribute.TITLE: 'title'>: None,
      <UpdateEntityStateAttribute.UPDATE_PERCENTAGE: 'update_percentage'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'update.mikrotik_routeros_firmware_update',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_update_entities[no_update][update.mikrotik_routerboard_firmware_update-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'update',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'update.mikrotik_routerboard_firmware_update',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'RouterBOARD Firmware Update',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'RouterBOARD Firmware Update',
    'platform': 'mikrotik',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <UpdateEntityFeature: 1>,
    'translation_key': 'routerboard_update',
    'unique_id': 'ABC123_routerboard-update',
    'unit_of_measurement': None,
  })
# ---
# name: test_update_entities[no_update][update.mikrotik_routerboard_firmware_update-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <UpdateEntityStateAttribute.AUTO_UPDATE: 'auto_update'>: False,
      <UpdateEntityStateAttribute.DISPLAY_PRECISION: 'display_precision'>: 0,
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/brands/integration/mikrotik/icon.png',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mikrotik RouterBOARD Firmware Update',
      <UpdateEntityStateAttribute.IN_PROGRESS: 'in_progress'>: False,
      <UpdateEntityStateAttribute.INSTALLED_VERSION: 'installed_version'>: '7.18.2',
      <UpdateEntityStateAttribute.LATEST_VERSION: 'latest_version'>: '7.19.1',
      <UpdateEntityStateAttribute.RELEASE_SUMMARY: 'release_summary'>: None,
      <UpdateEntityStateAttribute.RELEASE_URL: 'release_url'>: None,
      <UpdateEntityStateAttribute.SKIPPED_VERSION: 'skipped_version'>: None,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <UpdateEntityFeature: 1>,
      <UpdateEntityStateAttribute.TITLE: 'title'>: None,
      <UpdateEntityStateAttribute.UPDATE_PERCENTAGE: 'update_percentage'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'update.mikrotik_routerboard_firmware_update',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_update_entities[no_update][update.mikrotik_routeros_firmware_update-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'update',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'update.mikrotik_routeros_firmware_update',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'RouterOS Firmware Update',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'RouterOS Firmware Update',
    'platform': 'mikrotik',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <UpdateEntityFeature: 9>,
    'translation_key': 'firmware_update',
    'unique_id': 'ABC123_fw-update',
    'unit_of_measurement': None,
  })
# ---
# name: test_update_entities[no_update][update.mikrotik_routeros_firmware_update-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <UpdateEntityStateAttribute.AUTO_UPDATE: 'auto_update'>: False,
      <UpdateEntityStateAttribute.DISPLAY_PRECISION: 'display_precision'>: 0,
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/brands/integration/mikrotik/icon.png',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mikrotik RouterOS Firmware Update',
      <UpdateEntityStateAttribute.IN_PROGRESS: 'in_progress'>: False,
      <UpdateEntityStateAttribute.INSTALLED_VERSION: 'installed_version'>: '7.18.2',
      <UpdateEntityStateAttribute.LATEST_VERSION: 'latest_version'>: '7.19.1',
      <UpdateEntityStateAttribute.RELEASE_SUMMARY: 'release_summary'>: None,
      <UpdateEntityStateAttribute.RELEASE_URL: 'release_url'>: 'https://cdn.mikrotik.com/routeros/7.19.1/CHANGELOG',
      <UpdateEntityStateAttribute.SKIPPED_VERSION: 'skipped_version'>: None,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <UpdateEntityFeature: 9>,
      <UpdateEntityStateAttribute.TITLE: 'title'>: None,
      <UpdateEntityStateAttribute.UPDATE_PERCENTAGE: 'update_percentage'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'update.mikrotik_routeros_firmware_update',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_update_entities[routerboard_update_available][update.mikrotik_routerboard_firmware_update-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'update',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'update.mikrotik_routerboard_firmware_update',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'RouterBOARD Firmware Update',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'RouterBOARD Firmware Update',
    'platform': 'mikrotik',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <UpdateEntityFeature: 1>,
    'translation_key': 'routerboard_update',
    'unique_id': 'ABC123_routerboard-update',
    'unit_of_measurement': None,
  })
# ---
# name: test_update_entities[routerboard_update_available][update.mikrotik_routerboard_firmware_update-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <UpdateEntityStateAttribute.AUTO_UPDATE: 'auto_update'>: False,
      <UpdateEntityStateAttribute.DISPLAY_PRECISION: 'display_precision'>: 0,
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/brands/integration/mikrotik/icon.png',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mikrotik RouterBOARD Firmware Update',
      <UpdateEntityStateAttribute.IN_PROGRESS: 'in_progress'>: False,
      <UpdateEntityStateAttribute.INSTALLED_VERSION: 'installed_version'>: '7.18.2',
      <UpdateEntityStateAttribute.LATEST_VERSION: 'latest_version'>: '7.19.1',
      <UpdateEntityStateAttribute.RELEASE_SUMMARY: 'release_summary'>: None,
      <UpdateEntityStateAttribute.RELEASE_URL: 'release_url'>: None,
      <UpdateEntityStateAttribute.SKIPPED_VERSION: 'skipped_version'>: None,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <UpdateEntityFeature: 1>,
      <UpdateEntityStateAttribute.TITLE: 'title'>: None,
      <UpdateEntityStateAttribute.UPDATE_PERCENTAGE: 'update_percentage'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'update.mikrotik_routerboard_firmware_update',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_update_entities[routerboard_update_available][update.mikrotik_routeros_firmware_update-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'update',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'update.mikrotik_routeros_firmware_update',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'RouterOS Firmware Update',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'RouterOS Firmware Update',
    'platform': 'mikrotik',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <UpdateEntityFeature: 9>,
    'translation_key': 'firmware_update',
    'unique_id': 'ABC123_fw-update',
    'unit_of_measurement': None,
  })
# ---
# name: test_update_entities[routerboard_update_available][update.mikrotik_routeros_firmware_update-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <UpdateEntityStateAttribute.AUTO_UPDATE: 'auto_update'>: False,
      <UpdateEntityStateAttribute.DISPLAY_PRECISION: 'display_precision'>: 0,
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/brands/integration/mikrotik/icon.png',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mikrotik RouterOS Firmware Update',
      <UpdateEntityStateAttribute.IN_PROGRESS: 'in_progress'>: False,
      <UpdateEntityStateAttribute.INSTALLED_VERSION: 'installed_version'>: '7.18.2',
      <UpdateEntityStateAttribute.LATEST_VERSION: 'latest_version'>: '7.19.1',
      <UpdateEntityStateAttribute.RELEASE_SUMMARY: 'release_summary'>: None,
      <UpdateEntityStateAttribute.RELEASE_URL: 'release_url'>: 'https://cdn.mikrotik.com/routeros/7.19.1/CHANGELOG',
      <UpdateEntityStateAttribute.SKIPPED_VERSION: 'skipped_version'>: None,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <UpdateEntityFeature: 9>,
      <UpdateEntityStateAttribute.TITLE: 'title'>: None,
      <UpdateEntityStateAttribute.UPDATE_PERCENTAGE: 'update_percentage'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'update.mikrotik_routeros_firmware_update',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
